again another test/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/jdk-8-oracle-arm32-vfp-hflt/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/pi/myFirstTest/again another test
-d
/home/pi/myFirstTest/again another test/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/pi/myFirstTest/again another test/Grid.java
<---- end of javadoc command ---->
Loading source file /home/pi/myFirstTest/again another test/Grid.java...
/home/pi/myFirstTest/again another test/Grid.java:48: error: ';' expected
      p = fl.pop()l
                  ^
/home/pi/myFirstTest/again another test/Grid.java:49: error: ';' expected
      o++;}
       ^
2 errors
